Fix Alignment

--- a/client/src/components/Menu/menu.css
+++ b/client/src/components/Menu/menu.css
@@ -13,6 +13,10 @@
     padding-left: 25px;
 }
 
+.align{
+    padding-left: 8px;
+}
+
 .nav-link{
     padding: 15px;
 }
